# build_dll_from_rust_and_use_with_cmake

./: CMakeLists.txt  README.md
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
src/: main.cpp
